# hf_build_small_hackathon

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-space.yml
scripts/: deploy_space.py
