[project]
name = "hf-build-small-hackathon"
version = "0.1.0"
description = "Inference-only Gradio Space for MiniCPM-V 4.6."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.8.0",
    "av>=14.0.0",
    "gradio>=5.0.0",
    "pillow>=11.0.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers[torch]>=5.7.0",
]

[tool.uv]
package = false
